# heinrich-app

./: .gitignore  CLAUDE.md  README.md  app.py  args.py  calculations.py  cli.py  cli_args_parser.py  csv_loader.py  data_transformer.py  docgen.py  formatting.py  input_args.py  main.py  models.py  paths.py  pyproject.toml  requirements.txt  requirements_dev.txt  services.py  state.py
backend/: calculations.py  cli_args_parser.py  config.py  csv_loader.py  csv_transformer.py  docgen.py  formatting.py  input_args.py  messages.py  models.py  paths.py  pdfgen.py  placeholders.py  services.py
core/: cli_args_parser.py  config.py  csv_loader.py  csv_transformer.py  docgen.py  formatting.py  input_args.py  models.py  paths.py  pdfgen.py  services.py
demo/: demo_app.py
demo/pages/: 1_Dokumente_erzeugen.py  2_E-Rechnung.py  3_Konfiguration.py
heinrich_metallbau.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: app_linux.desktop  app_windows.vbs  run_linux.sh  run_windows.bat
src/backend/: cli_args_parser.py  config.py  csv_loader.py  csv_transformer.py  docgen.py  formatting.py  input_args.py  messages.py  models.py  paths.py  pdfgen.py  services.py
src/ui/: state.py
templates/: Vordruck_sample.docx
tests/: test_config.py
